--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           </div>
         </a>
         <button class="open-menu" aria-label="Abrir menú">
-          <img src="img/chy.png" alt="abrir menú" />
+          <img src="img/sh.png" alt="abrir menú" />
         </button>
         <ul class="menu">
           <button class="close-menu" aria-label="Cerrar menú">
-            <img src="img/rj.png" alt="cerrar menú" />
+            <img src="img/chy.png" alt="cerrar menú" />
           </button>
           <li><a href="#profile" class="selected">Perfil</a></li>
           <li><a href="#experience">Experiencia</a></li>
